feat(deploy): test point

--- a/test/index.html
+++ b/test/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Hello World</title>
+    <title>Connection test/title>
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <p>
+     this is a test page for connection to the server.
+    </p>
   </body>
 </html>
